# tools

./: .cirun.yml  .editorconfig  .gitignore  .gitpod.yml  .markdownlint.yml  .nf-core-complete.bash  .nf-core-complete.zsh  .openapi-generator-ignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.yml  .travis.yml  .yamllint.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  base.Dockerfile  benchmark_module_lint.py  codecov.yml  log.txt  mise.toml  mypy.ini  openapi.yaml  performance_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rules.py  setup.py  test.md  tools.Dockerfile
.claude/hooks/: post-edit.py
.codeboarding/: CLI_Interface.md  Core_Utilities_Configuration.md  Pipeline_Management_Schema.md  Repository_Sync_Services.md  Test_Data_Management.md  on_boarding.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/build-devcontainer/: Dockerfile  devcontainer.json
.github/: .coveragerc  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  codecov.yml  coveragerc  markdownlint.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/__snapshots__/: citations.nf.test.snap
.github/actions/: create-lint-wf.yml
.github/snapshots/: adaptivecard.nf.test.snap  changelog.nf.test.snap  ci.nf.test.snap  citations.nf.test.snap  code_linters.nf.test.snap  codespaces.nf.test.snap  default.nf.test.snap  documentation.nf.test.snap  email.nf.test.snap  fastqc.nf.test.snap  github_badges.nf.test.snap  gitpod.nf.test.snap  gpu.nf.test.snap  igenomes.nf.test.snap  license.nf.test.snap  modules.nf.test.snap  multiqc.nf.test.snap  nf_core_configs.nf.test.snap  nf_schema.nf.test.snap  rocrate.nf.test.snap  seqera_platform.nf.test.snap  slackreport.nf.test.snap  vscode.nf.test.snap
.github/workflows/: branch.yml  build_gitpod.yml  changelog.py  changelog.yml  clean-up.yml  code-tests.yml  create-lint-wf.yml  create-test-lint-wf-template-mise.yml  create-test-lint-wf-template.yml  create-test-wf-template.yml  create-test-wf.yml  deploy-pypi.yml  fix-linting.yml  isort.yml  lint-code.yml  markdown-lint.yml  my_pytest.yml  name: self-hosted test workflow.yml  nextflow-source-test.yml  push_dockerhub.yml  push_dockerhub_dev.yml  push_dockerhub_release.yml  pytest-frozen-ubuntu-20.04.yml  pytest-mise.yml  pytest.yml  python-lint.yml  regenerate-snapshots.yml  rich-codex.yml  stale-tagged.yml  sync.yml  sync_test.yml  test_offline_configs.yml  tools-api-docs-dev.yml  tools-api-docs-release.yml  tools-api-docs.yml  update-template-snapshots.yml  update-textual-snapshots.yml  update_components_template.yml  yaml-lint.yml  yamllint.yml
docs/: citation.md  lint_errors.md
docs/api/: Makefile  conf.py  generate-api-docs.sh  index.md  index.rst  make_lint_md.py  make_lint_rst.py  make_lint_rst.py.22f9371628f16666a1214bbd4decbfd7.tmp  modules.rst  nf_core.rst  pydocmd.yml  remark.mjs  requirements.txt
docs/jenkins/: README.md  docker-compose.yml
docs/markdown/: bump_version.md  create_new_module.md  creating_pipeline.md  installation.md  launch_pipeline.md  launch_tools.md  listing_modules.md  listing_pipelines.md  module_check.md  module_information.md  module_test_config.md  modules_update_container_versions.md  pipeliene_module_remove.md  pipeline_module_install.md  pipeline_module_update.md  pipeline_offline_use.md  pipeline_schema.md  pipeline_sw_licences.md  remote_modules.md  singularity_containers.md  sync_pipeline.md  workflow_linting.md
docs/modules/: modules.md  modules_bump_version.md  modules_create.md  modules_create_test_yml.md  modules_info.md  modules_install.md  modules_lint.md  modules_list.md  modules_patch.md  modules_remove.md  modules_test.md  modules_update.md
docs/pipeline/: bump_version.md  create_a_parameter_file.md  creating_a_new_pipeline.md  download.md  installation.md  launch.md  linting_a_workflow.md  listing_pipelines.md  pipeline_schema.md  sync.md
docs/split_mds/: Bumping_pipeline_version.md  Creating_pipeline.md  Installation.md  Launch_pipeline.md  Launch_tools.md  Listing_pipelines.md  Modules_info.md  Offline_use.md  Pipeline_schema.md  Pipeline_sw_licences.md  Singularity_containers_info.md  Sync_pipeline.md  Workflow_linting.md
docs/subworkflows/: subworkflow_create.md  subworkflow_create_test_config.md  subworkflow_lint.md  subworkflow_remove.md  subworkflow_test.md  subworkflows.md  subworkflows_info.md  subworkflows_install.md  subworkflows_list.md  subworkflows_update.md
lib/: CommonFunctions.groovy
nf_core/: __init__.py  __main__.py  bump_version.py  commands_modules.py  commands_pipelines.py  commands_subworkflows.py  commands_test_datasets.py  components_utils.py  create.py  create_logo.py  download.py  launch.py  licences.py  lint.py  lint_utils.py  list.py  logo.py  modules.py  monitor.py  params_file.py  params_template.py  path_utils.py  refgenie.py  release.py  ro_crate.py  rocrate.py  schema.py  server.py  sync.py  synced_repo.py  textual.tcss  toolong_formatter.py  utils.py  version.py
nf_core/components/: components.py  components_command.py  components_completion.py  constants.py  (+14 more)
scripts/: nf-core
test/: test_lint.py
tests/: __init__.py  conftest.py  test_bump_version.py  test_cli.py  test_components.py  test_create.py  test_create_app.py  test_create_logo.py  test_create_username.py  test_download.py  test_launch.py  test_licenses.py  test_lint.py  test_lint_utils.py  test_list.py  test_modules.py  test_modules_legacy.py  test_mullled.py  test_params_file.py  test_params_template.py  test_pipelines.py  test_refgenie.py  test_release.py  test_rocrate.py  test_schema.py  test_subworkflows.py  test_sync.py  test_test_utils.py  test_utils.py  utils.py
web-gui/: 404.html  robots.txt  schema_builder.html
(+903 files in other folders)
