[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=40.6.0",
    "wheel"
]

[tool.pytest.ini_options]
markers = [
    "datafiles: load datafiles"
]
testpaths = ["tests"]
norecursedirs = [ ".*", "build", "dist", "*.egg", "data", "__pycache__", ".github", "nf_core", "docs"]

[tool.ruff]
line-length = 120
target-version = "py38"
ignore = ["E501"]
select = ["I", "E4", "E7", "E9", "F"]

[tool.ruff.isort]
known-first-party = ["nf_core"]
